# model2item

./: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: iterm_mcp_adapter.py
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: comparison_commands.rs  custom_provider_commands.rs  evaluation_case_commands.rs  mod.rs  profile_commands.rs  window_binding_commands.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/db/migrations/: 0001_initial.sql  0002_add_execution_mode_to_model_profiles.sql  0003_add_enabled_to_model_profiles.sql  0004_add_custom_providers.sql
src-tauri/src/models/: comparison_run.rs  custom_provider.rs  evaluation_case.rs  iterm_session.rs  mod.rs  profile.rs  window_binding.rs
src-tauri/src/services/: analysis_service.rs  comparison_orchestrator.rs  comparison_run_service.rs  custom_provider_service.rs  evaluation_case_service.rs  iterm_mcp_adapter.rs  iterm_session_service.rs  mod.rs  openai_chat_executor.rs  profile_service.rs  secret_store.rs  window_binding_service.rs  window_binding_sync_service.rs
src-tauri/tests/: analysis_service.rs  comparison_orchestrator.rs  comparison_run_service.rs  custom_provider_service.rs  db_connect.rs  evaluation_case_service.rs  iterm_session_service.rs  profile_service.rs  window_binding_service.rs
src-tauri/tests/support/: mod.rs
src/app/: router.tsx
src/lib/: formatters.ts  tauri.test.ts  tauri.ts
(+40 files in other folders)
