[package]
name = "iterm_mcp_tools"
version = "0.1.0"
description = "Local iTerm MCP evaluation workbench"
authors = ["cxymds"]
edition = "2021"

[lib]
name = "iterm_mcp_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
thiserror = "1.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
uuid = { version = "1.10.0", features = ["v4"] }
keyring = "3.6.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "process", "sync", "time", "io-util"] }
async-trait = "0.1.83"

[dev-dependencies]
